[tool.black]
line-length = 110

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
known_localfolder = "status_map,tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.poetry]
name = "status-map"
version = "0.4.0"
description = "Status map (and its transitions) data structure"
license = "MIT"
authors = ["Luiz Menezes <luiz.menezesf@gmail.com>", "Rafael Cassau <rafa.cassau@gmail.com>"]

repository = "https://github.com/lamenezes/django-choices-enum"
homepage = "https://github.com/lamenezes/django-choices-enum"

keywords = ['enum', 'django', 'models', 'choices']

[tool.poetry.dependencies]
python = "^3.6"
networkx = "^2.3"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "^3.7"
isort = "^4.3"
pre-commit = "^1.16"
pytest = "^3.0"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
