[tool.black]
line-length = 110

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
known_localfolder = "status_map,tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.poetry]
name = "status-map"
version = "0.5.1"
description = "Status map (and its transitions) data structure"
license = "MIT"
authors = ["Luiz Menezes <luiz.menezesf@gmail.com>", "Rafael Cassau <rafa.cassau@gmail.com>"]

repository = "https://github.com/lamenezes/status-map"
homepage = "https://github.com/lamenezes/status-map"

keywords = ['status', 'map', 'transition', 'validation']

[tool.poetry.dependencies]
python = ">=3.6.2,<4"
networkx = ">=2.5"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
codecov = "*"
flake8 = ">=4.0"
isort = ">=4.3"
pre-commit = "^2.15"
pytest = ">=6.0"
pytest-cov = ">=3.0"
# urllib3 = ">=1.26"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
